# FGST-pytorch

./: .gitignore  CMakeLists.txt  FGST框架与参数说明.md  PPT_中期检查_陈俊舟.md  README.md  eval_fgst.bat  paper_fgst_keypoints_report.md  predict_fgst.bat  research_method.pos  run_fgst.bat  run_fgst_pytorch.bat  run_fgst_reid.bat  run_radar_baseline.bat  train_fgst.bat  毕业论文初稿_毫米波步态识别.md
config/: example.cfg  fgst_2s.cfg  fgst_2s_pytorch.cfg
data/: manifest.csv
data/sequences/: seq_0001.csv  seq_0002.csv
include/: classifier.hpp  config.hpp  dataset.hpp  features.hpp  fgst_model.hpp  metrics.hpp  model_io.hpp  pipeline.hpp  preprocess.hpp  softmax_classifier.hpp  types.hpp
python/: README_pt.md  fgst_reid.py  mmwave_pt.py  process_data.py  radar_baseline.py
src/: classifier.cpp  config.cpp  dataset.cpp  features.cpp  fgst_model.cpp  main.cpp  metrics.cpp  model_io.cpp  pipeline.cpp  preprocess.cpp  softmax_classifier.cpp
